public/custom-assets/css/k-editor.css
body, body.document-editor {
    width: 21cm;
    min-height: 29.7cm;
    padding: 0.5cm 1cm;
    /*
    margin: 0.5cm auto; Replaced with the style below because it was causing row and column resize handles to not show
    position: absolute;left: 50%; transform: translateX(-50%);
    */
    position: absolute;
    left: 50%;
    transform: translateX(-50%);
    background: white;
    font-size: medium;
    line-height: 1.2;
    font-family: "Times New Roman", Poppins, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, Verdana, Helvetica, sans-serif;
}

body.document-editor {
    border: 1px #D3D3D3 solid;
    box-shadow: 0 0 5px rgba(0, 0, 0, 0.1);
}

/*For responsive images*/
img {
    max-width: 100%;
    height: auto;
}

img:not(.header-logo) {
    margin-left: auto;
    margin-right: auto;
    margin-top: 20px;
}

table:not(.page-template-header-logo) tr td {
    border: 1px solid black;
}

table {
    border-collapse: collapse;
}

/*
Fix bullet circle very tiny and hardly visible in preview mode
*/
ul {
    list-style: none;
}

ul li:before {
    content: "•";
    font-size: 120%; /* or whatever */
    padding-right: 5px;
}

/*
Trying to fix word breaking in the middle of the word
*/
table:not(.page-template-header-logo) {
    table-layout: auto;
    width: 100%;
    border: 1px solid black;
}

span[lang] {
    font-style: normal;
}

.page-template .header {
    color: #888;
}

.page-break {
    background: url('images/pagebreak.gif') no-repeat center center;
    clear: both;
    width: 100%;
    border-top: #999 1px dotted;
    border-bottom: #999 1px dotted;
    padding: 1px;
    height: 4px;
    cursor: default;
}

@media print {
    .page-break {
        opacity: 0 !important;
    }

    body.document-editor {
        border: 0;
        box-shadow: none;
        padding: 0;
    }
}

